--- a/projetgroupe.html
+++ b/projetgroupe.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
+<html lang="fr">
 <head>
-    <h1>puisse pas quatre</h1>
-    <p>ceci est un puissant quatre créé par Mohamed, Joey, Aurélie </p>
+    <meta charset="UTF-8">
+    <title>Puissant pas Quatre</title>
+    <link rel="stylesheet" href="css.css"> <!-- ton fichier CSS -->
 </head>
-<body>  
-<p>puissant quatre</p>
+<body>
+    <h1>Puissant pas Quatre</h1>
+    <p>Ceci est un puissant quatre créé par Mohamed, Joey, Aurélie.</p>
+    <p>Puissant quatre</p>
 </body>
 </html>
