--- a/projetgroupe.html
+++ b/projetgroupe.html
@@ -1,3 +1,19 @@
+<body>
+  <header class="site-header">
+    <h1>Puissant pas Quatre</h1>
+    <nav>
+      <a href="#">Accueil</a>
+      <a href="#">À propos</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <main class="container">
+    <!-- le reste de la page -->
+  </main>
+</body>
+
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -11,3 +27,4 @@
     <p>Puissant quatre</p>
 </body>
 </html>
+
