--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Puissant pas Quatre</title>
-  <link rel="stylesheet" href="css.css">
+  <link rel="stylesheet" href="style/css.css">
   <style>
     body {
       font-family: Arial, sans-serif;
