--- a/static/index.html
+++ b/static/index.html
@@ -73,6 +73,7 @@
 
   <main>
     <p>Ceci est un puissant quatre créé par Mohamed, Joey, Aurélie.</p>
+    <h2>Le but est d'aligner 4 jetons de sa couleur horizontalement, verticalement ou en diagonale pour remporter la partie.</h2>
 
     <div id="board" class="board"></div>
 
