--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,7 @@
   <header class="site-header">
     <div class="brand">
       <!-- <img src="logo.png" alt="Logo"> -->
-      <span>Puissant pas Quatre</span>
+      <span></span>
     </div>
     <nav class="nav">
       <a href="#">Accueil</a>
