--- a/static/index.html
+++ b/static/index.html
@@ -147,7 +147,7 @@
   <div class="top-band">Puissant pas Quatre</div>
 
   <header class="site-header">
-    <div class="brand"><span>Jeu en Ligne</span></div>
+    <div class="brand"><span></span></div>
     <nav class="nav">
       <a href="#">Accueil</a>
       <a href="regles.html" target="_blank">Règles</a>
