--- a/static/index.html
+++ b/static/index.html
@@ -156,8 +156,7 @@
   </header>
 
   <main>
-    <p>Ceci est un puissant quatre créé par Mohamed, Joey et Aurélie.</p>
-    <h2>Le but est d'aligner 4 jetons de sa couleur horizontalement, verticalement ou en diagonale pour remporter la partie.</h2>
+    <h2>Ceci est un puissant quatre créé par Mohamed, Joey et Aurélie.</h2>
 
     <div class="board-wrap">
       <div class="button-row">
