--- a/static/index.html
+++ b/static/index.html
@@ -144,7 +144,7 @@
 </head>
 <body>
 
-  <div class="top-band">Puissant pas Quatre</div>
+  <div class="top-band"><h2>Puissant pas Quatre</h2>
 
   <header class="site-header">
     <div class="brand"><span></span></div>
