--- a/static/index.html
+++ b/static/index.html
@@ -20,11 +20,10 @@
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       text-align: center;
       color: #f0f0f5;
-      /* on enlève l'ancien dégradé pour laisser voir la vidéo */
-      background: transparent;
+      background: transparent;   /* on laisse voir la vidéo */
     }
 
-    /* Un léger voile pour la lisibilité du texte */
+    /* Voile sombre pour lisibilité */
     .page-content{
       position: relative;
       min-height: 100vh;
@@ -32,7 +31,7 @@
     .page-content::before{
       content:"";
       position: fixed; inset: 0;
-      background: rgba(6, 18, 24, 0.45); /* voile sombre */
+      background: rgba(6, 18, 24, 0.45);
       z-index: -0.5;
     }
 
@@ -83,14 +82,21 @@
       margin: 30px auto;
       backdrop-filter: blur(2px);
     }
-    .button-row {
-      display: flex; justify-content: center; gap: 8px; margin-bottom: 12px;
-    }
+    .button-row { display: flex; justify-content: center; gap: 8px; margin-bottom: 12px; }
     .button-row button {
       width: 56px; height: 40px; background: #00bfa5; color: #fff; border: none;
       border-radius: 10px; font-weight: 700; cursor: pointer; transition: all .2s;
     }
     .button-row button:hover { transform: translateY(-3px); filter: brightness(1.2); }
+
+    /* Bouton Reset (sans JS) */
+    .button-row form{ display:inline-block; margin:0; }
+    .reset-btn{
+      background:#ef4444; color:#fff; border:none;
+      border-radius:10px; padding:10px 16px; font-weight:700; cursor:pointer;
+    }
+    .reset-btn:hover{ filter:brightness(1.12); transform: translateY(-2px); }
+
     .board { display: inline-block; }
     .row   { display: flex; gap: 8px; }
     .cell{
@@ -118,13 +124,12 @@
 </head>
 <body>
 
-  <!-- Vidéo de fond -->
-  <video class="background-video" autoplay muted loop playsinline>
+  <!-- Vidéo de fond en boucle -->
+  <video class="background-video" autoplay muted loop playsinline preload="auto">
     <source src="/static/284566_large.mp4" type="video/mp4">
-    <!-- Astuce: ajoute poster="/static/cover.jpg" si tu veux une image de préchargement -->
   </video>
 
-  <!-- Tout le contenu passe au-dessus de la vidéo -->
+  <!-- Contenu au-dessus de la vidéo -->
   <div class="page-content">
 
     <div class="top-band"><h2>Puissant pas Quatre</h2></div>
@@ -132,7 +137,7 @@
     <header class="site-header">
       <div class="brand"><span></span></div>
       <nav class="nav">
-        <a href="/">Accueil</a>
+        <a href="/index.html">Accueil</a>
         <a href="/regle">Règles</a>
         <a href="#">Contact</a>
       </nav>
@@ -151,6 +156,14 @@
           <button onclick="play(5)">↓</button>
           <button onclick="play(6)">↓</button>
         </div>
+
+        <!-- Bouton Reset (POST /reset) -->
+        <div class="button-row">
+          <form action="/reset" method="post">
+            <button class="reset-btn" type="submit">↺ Reset</button>
+          </form>
+        </div>
+
         <div id="board" class="board"></div>
       </div>
 
