--- a/static/index.html
+++ b/static/index.html
@@ -139,7 +139,7 @@
       <nav class="nav">
         <a href="/index.html">Accueil</a>
         <a href="/regle">Règles</a>
-        <a href="#">Contact</a>
+        <a href="/contact">Contact</a>
       </nav>
     </header>
 
