--- a/static/contact.html
+++ b/static/contact.html
@@ -13,7 +13,6 @@
       background: linear-gradient(to bottom, #1c2a35, #0d1b26);
       color: #f0f0f5;
     }
-
     /* ====== Bande supérieure ====== */
     .top-band {
       background: #0f3d3e;
@@ -112,3 +111,30 @@
   </style>
 </head>
 <body>
+
+  <div class="top-band">Puissant pas Quatre - Contact</div>
+
+  <header class="site-header">
+    <div class="brand"><span></span></div>
+    <nav class="nav">
+      <a href="/index.html">Accueil</a>
+      <a href="/regle">Règles</a>
+      <a href="/contact">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Contact</h1>
+
+    <p>Ceci est un puissant quatre créé par Mohamed, Joey et Aurélie</p>
+
+    <h2>Mail</h2>
+    <ul>
+      <li>joey.sportes@ynov.com</li>
+      <li>mohamedsayd.traore@ynov.com</li>
+      <li>aurélie.malgorn@ynov.com</li>
+    </ul>
+
+</body>
+</html>
+
