--- a/static/contact.html
+++ b/static/contact.html
@@ -2,139 +2,45 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Règles du Puissance 4</title>
+  <title>Contact - Puissant pas Quatre</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    /* ====== Fond et texte ====== */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      text-align: center;
-      background: linear-gradient(to bottom, #1c2a35, #0d1b26);
-      color: #f0f0f5;
-    }
-    /* ====== Bande supérieure ====== */
-    .top-band {
-      background: #0f3d3e;
-      color: #e0f7fa;
-      text-align: center;
-      padding: 10px 0;
-      font-weight: 700;
-      letter-spacing: 0.5px;
-      position: sticky;
-      top: 0;
-      z-index: 1001;
-    }
-
-    /* ====== Header ====== */
-    .site-header {
-      width: 100%;
-      background: #144552;
-      color: #ffffff;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 12px 24px;
-      box-sizing: border-box;
-      position: sticky;
-      top: 40px;
-      z-index: 1000;
-      border-bottom: 2px solid #00bfa5;
-    }
-
-    .brand span {
-      font-size: 1.3rem;
-      color: #e0f7fa;
-    }
-
-    .nav a {
-      color: #a0e0e0;
-      text-decoration: none;
-      margin-left: 20px;
-      font-weight: 600;
-      transition: color 0.3s;
-    }
-    .nav a:hover { color: #00bfa5; }
-
-    /* ====== Contenu ====== */
-    main {
-      max-width: 900px;
-      margin: 30px auto;
-      padding: 0 20px;
-      text-align: left;
-      background: rgba(20, 69, 82, 0.85); /* plateau doux pour le texte */
-      border-radius: 15px;
-      box-shadow: 0 0 20px #0008;
-    }
-
-    main h1, main h2 {
-      text-align: center;
-      color: #e0f7fa;
-    }
-
-    main p, main li {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      color: #f0f0f5;
-    }
-
-    main ul {
-      padding-left: 20px;
-      margin-bottom: 20px;
-    }
-
-    /* ====== Encadré exemple ====== */
-    .example-board {
-      display: flex;
-      justify-content: center;
-      margin: 20px 0;
-    }
-
-    .example-cell {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      margin: 2px;
-      background: radial-gradient(circle at 30% 30%, #0a1f2f, #0c2f3f);
-      box-shadow: inset 0 2px 6px #0008, 0 2px 4px #0006;
-      display: inline-block;
-    }
-
-    .example-cell.red { background: radial-gradient(circle at 30% 30%, #ff334e, #ff6f7a); }
-    .example-cell.yellow { background: radial-gradient(circle at 30% 30%, #ffd04d, #ffe57a); }
-
-    /* Responsive */
-    @media (max-width: 600px) {
-      main { padding: 15px; }
-      .example-cell { width: 30px; height: 30px; margin: 1px; }
-    }
-  </style>
+  <link rel="stylesheet" href="/style/css.css">
 </head>
 <body>
 
-  <div class="top-band">Puissant pas Quatre - Contact</div>
+  <!-- Vidéo de fond -->
+  <video class="background-video" autoplay muted loop playsinline preload="auto">
+    <source src="/static/284566_large.mp4" type="video/mp4">
+  </video>
 
-  <header class="site-header">
-    <div class="brand"><span></span></div>
-    <nav class="nav">
-      <a href="/index.html">Accueil</a>
-      <a href="/regle">Règles</a>
-      <a href="/contact">Contact</a>
-    </nav>
-  </header>
+  <div class="page-content">
 
-  <main>
-    <h1>Contact</h1>
+    <div class="top-band"><h2>Puissant pas Quatre - Contact</h2></div>
 
-    <p>Ceci est un puissant quatre créé par Mohamed, Joey et Aurélie</p>
+    <header class="site-header">
+      <div class="brand"><span></span></div>
+      <nav class="nav">
+        <a href="/index">Accueil</a>
+        <a href="/regle">Règles</a>
+        <a href="/contact">Contact</a>
+      </nav>
+    </header>
 
-    <h2>Mail</h2>
-    <ul>
-      <li>joey.sportes@ynov.com</li>
-      <li>mohamedsayd.traore@ynov.com</li>
-      <li>aurélie.malgorn@ynov.com</li>
-    </ul>
+    <main class="text-page">
+      <h1>Contact</h1>
 
+      <p>Ce site <strong>Puissant pas Quatre</strong> a été réalisé par <strong>Mohamed</strong>, <strong>Joey</strong> et <strong>Aurélie</strong>.</p>
+
+      <h2>Nous contacter :</h2>
+      <ul>
+        <li><strong>Joey Sportes</strong> — <a href="mailto:joey.sportes@ynov.com">joey.sportes@ynov.com</a></li>
+        <li><strong>Mohamed-Sayd Traoré</strong> — <a href="mailto:mohamedsayd.traore@ynov.com">mohamedsayd.traore@ynov.com</a></li>
+        <li><strong>Aurélie Malgorn</strong> — <a href="mailto:aurelie.malgorn@ynov.com">aurelie.malgorn@ynov.com</a></li>
+      </ul>
+
+      <p>Merci de votre visite et amusez-vous bien sur notre jeu !</p>
+    </main>
+
+  </div>
 </body>
 </html>
-
