--- a/static/index.html
+++ b/static/index.html
@@ -2,134 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Puissant pas Quatre</title>
+  <title>Accueil - Puissant pas Quatre</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <style>
-    /* ====== Vidéo de fond ====== */
-    .background-video{
-      position: fixed;
-      right: 0; bottom: 0; left: 0; top: 0;
-      width: 100vw; height: 100vh;
-      object-fit: cover;         /* remplit l’écran sans déformer */
-      z-index: -1;               /* derrière tout */
-    }
-
-    /* ====== Fond général (au-dessus de la vidéo) ====== */
-    html, body { margin: 0; }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      text-align: center;
-      color: #f0f0f5;
-      background: transparent;   /* on laisse voir la vidéo */
-    }
-
-    /* Voile sombre pour lisibilité */
-    .page-content{
-      position: relative;
-      min-height: 100vh;
-    }
-    .page-content::before{
-      content:"";
-      position: fixed; inset: 0;
-      background: rgba(6, 18, 24, 0.45);
-      z-index: -0.5;
-    }
-
-    /* ====== Bande supérieure ====== */
-    .top-band {
-      background: rgba(15, 61, 62, 0.95);
-      color: #e0f7fa;
-      text-align: center;
-      padding: 10px 0;
-      font-weight: 700;
-      letter-spacing: 0.5px;
-      position: sticky;
-      top: 0;
-      z-index: 1001;
-      backdrop-filter: blur(4px);
-    }
-
-    /* ====== Header ====== */
-    .site-header {
-      width: 100%;
-      background: rgba(20, 69, 82, 0.92);
-      color: #ffffff;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 12px 24px;
-      box-sizing: border-box;
-      position: sticky;
-      top: 40px;
-      z-index: 1000;
-      border-bottom: 2px solid #00bfa5;
-      backdrop-filter: blur(4px);
-    }
-    .brand span { font-size: 1.3rem; color: #e0f7fa; }
-    .nav a {
-      color: #a0e0e0; text-decoration: none; margin-left: 20px; font-weight: 600;
-      transition: color .3s;
-    }
-    .nav a:hover { color: #00bfa5; }
-
-    /* ====== Plateau ====== */
-    .board-wrap {
-      background: rgba(12, 76, 76, 0.9);
-      border-radius: 18px;
-      padding: 12px;
-      box-shadow: inset 0 14px 40px #0008, 0 18px 42px #0007;
-      width: fit-content;
-      margin: 30px auto;
-      backdrop-filter: blur(2px);
-    }
-    .button-row { display: flex; justify-content: center; gap: 8px; margin-bottom: 12px; }
-    .button-row button {
-      width: 56px; height: 40px; background: #00bfa5; color: #fff; border: none;
-      border-radius: 10px; font-weight: 700; cursor: pointer; transition: all .2s;
-    }
-    .button-row button:hover { transform: translateY(-3px); filter: brightness(1.2); }
-
-    /* Bouton Reset (sans JS) */
-    .button-row form{ display:inline-block; margin:0; }
-    .reset-btn{
-      background:#ef4444; color:#fff; border:none;
-      border-radius:10px; padding:10px 16px; font-weight:700; cursor:pointer;
-    }
-    .reset-btn:hover{ filter:brightness(1.12); transform: translateY(-2px); }
-
-    .board { display: inline-block; }
-    .row   { display: flex; gap: 8px; }
-    .cell{
-      width: 56px; height: 56px; border-radius: 95%; border: none;
-      background: radial-gradient(circle at 75% 75%, #0d2e2f 0 24%, #0a1c1d 75% 100%);
-      box-shadow: inset 0 8px 16px #000c, 0 4px 8px #0007;
-      position: relative; overflow: hidden; display:flex; align-items:center; justify-content:center;
-      font-size: 0;
-    }
-    .cell.x::after, .cell.o::after{
-      content:""; position:absolute; inset:6px; border-radius:75%;
-      border:3px solid #0006; box-shadow: inset 0 8px 14px #fff3, 0 6px 14px #0007;
-      animation: drop .55s cubic-bezier(.34,1.56,.64,1);
-    }
-    .cell.x::after{ background:#ff334e; }  /* rouge */
-    .cell.o::after{ background:#ffd04d; }  /* jaune */
-    @keyframes drop{
-      0%{ transform:translateY(-140px) scale(1.1); opacity:.2 }
-      70%{ transform:translateY(0); opacity:1 }
-      85%{ transform:translateY(-10px) }
-      100%{ transform:translateY(0) }
-    }
-    #message{ min-height:24px; font-weight:700; margin-top:12px; color:#e0f7fa; }
-  </style>
+  <link rel="stylesheet" href="/style/css.css">
 </head>
 <body>
 
-  <!-- Vidéo de fond en boucle -->
+  <!-- Vidéo de fond -->
   <video class="background-video" autoplay muted loop playsinline preload="auto">
     <source src="/static/284566_large.mp4" type="video/mp4">
   </video>
 
-  <!-- Contenu au-dessus de la vidéo -->
   <div class="page-content">
 
     <div class="top-band"><h2>Puissant pas Quatre</h2></div>
@@ -137,100 +20,22 @@
     <header class="site-header">
       <div class="brand"><span></span></div>
       <nav class="nav">
-        <a href="/index.html">Accueil</a>
+        <a href="/index">Accueil</a>
         <a href="/regle">Règles</a>
         <a href="/contact">Contact</a>
       </nav>
     </header>
 
-    <main>
+    <main class="home">
+      <h1>Bienvenue sur le Puissant pas Quatre !</h1>
+      <p>Un jeu de stratégie amusant et interactif inspiré du célèbre Puissance 4.  
+      Affrontez vos amis et tentez d’aligner 4 jetons de votre couleur avant eux !</p>
 
-      <div class="board-wrap">
-        <div class="button-row">
-          <button onclick="play(0)">↓</button>
-          <button onclick="play(1)">↓</button>
-          <button onclick="play(2)">↓</button>
-          <button onclick="play(3)">↓</button>
-          <button onclick="play(4)">↓</button>
-          <button onclick="play(5)">↓</button>
-          <button onclick="play(6)">↓</button>
-        </div>
-
-        <!-- Bouton Reset (POST /reset) -->
-        <div class="button-row">
-          <form action="/reset" method="post">
-            <button class="reset-btn" type="submit">↺ Reset</button>
-          </form>
-        </div>
-
-        <div id="board" class="board"></div>
+      <div class="play-zone">
+        <a href="/static/game.html" class="play-button">Jouer maintenant</a>
       </div>
-
-      <p id="message"></p>
     </main>
 
   </div>
-
-  <script>
-    const ROWS = 6, COLS = 7;
-    let grid = Array.from({length: COLS}, () => Array(ROWS).fill(" "));
-    let currentPlayer = "X", gameOver = false;
-
-    function renderGrid(){
-      const board = document.getElementById("board");
-      board.innerHTML = "";
-      for (let y=0; y<ROWS; y++){
-        const row = document.createElement("div");
-        row.className = "row";
-        for (let x=0; x<COLS; x++){
-          const cell = document.createElement("div");
-          cell.className = "cell";
-          if (grid[x][y] === "X") cell.classList.add("x");
-          if (grid[x][y] === "O") cell.classList.add("o");
-          row.appendChild(cell);
-        }
-        board.appendChild(row);
-      }
-    }
-
-    function play(col){
-      if (gameOver) return;
-      for (let r=ROWS-1; r>=0; r--){
-        if (grid[col][r] === " "){
-          grid[col][r] = currentPlayer;
-          if (checkWin(col, r)){
-            document.getElementById("message").textContent = `Le joueur ${currentPlayer} a gagné !`;
-            gameOver = true;
-          } else {
-            currentPlayer = currentPlayer === "X" ? "O" : "X";
-            document.getElementById("message").textContent = `À toi de jouer : ${currentPlayer}`;
-          }
-          renderGrid();
-          return;
-        }
-      }
-      alert("Colonne pleine !");
-    }
-
-    function checkWin(c, r){
-      const dirs = [[[0,1],[0,-1]], [[1,0],[-1,0]], [[1,1],[-1,-1]], [[1,-1],[-1,1]]];
-      for (const dir of dirs){
-        let count = 1;
-        for (const [dx,dy] of dir){
-          let x=c, y=r;
-          while(true){
-            x+=dx; y+=dy;
-            if (x<0||x>=COLS||y<0||y>=ROWS) break;
-            if (grid[x][y] === currentPlayer) count++; else break;
-          }
-        }
-        if (count>=4) return true;
-      }
-      return false;
-    }
-
-    renderGrid();
-    document.getElementById("message").textContent = `À toi de jouer : ${currentPlayer}`;
-  </script>
 </body>
 </html>
